Convert Integer -> Long and fix sorting bug